@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2024 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,16 +15,12 @@
  */
 package org.thingsboard.server.service.subscription;
 
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
-import org.thingsboard.server.cluster.TbClusterService;
-import org.thingsboard.server.common.data.AttributeScope;
-import org.thingsboard.server.common.data.DataConstants;
-import org.thingsboard.server.common.data.EntityType;
 import org.thingsboard.server.common.data.alarm.AlarmInfo;
-import org.thingsboard.server.common.data.id.DeviceId;
 import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.id.UserId;
@@ -37,7 +33,6 @@ import org.thingsboard.server.common.data.kv.TsKvEntry;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.common.msg.queue.TbCallback;
 import org.thingsboard.server.common.msg.queue.TopicPartitionInfo;
-import org.thingsboard.server.common.msg.rule.engine.DeviceAttributesEventNotificationMsg;
 import org.thingsboard.server.gen.transport.TransportProtos.ToCoreNotificationMsg;
 import org.thingsboard.server.queue.TbQueueProducer;
 import org.thingsboard.server.queue.common.TbProtoQueueMsg;
@@ -49,12 +44,9 @@ import org.thingsboard.server.queue.discovery.event.OtherServiceShutdownEvent;
 import org.thingsboard.server.queue.discovery.event.PartitionChangeEvent;
 import org.thingsboard.server.queue.provider.TbQueueProducerProvider;
 import org.thingsboard.server.queue.util.TbCoreComponent;
-import org.thingsboard.server.service.state.DefaultDeviceStateService;
-import org.thingsboard.server.service.state.DeviceStateService;
 import org.thingsboard.server.service.ws.notification.sub.NotificationUpdate;
 import org.thingsboard.server.service.ws.notification.sub.NotificationsSubscriptionUpdate;
 
-import jakarta.annotation.PostConstruct;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -77,8 +69,6 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
     private final TbServiceInfoProvider serviceInfoProvider;
     private final TbQueueProducerProvider producerProvider;
     private final TbLocalSubscriptionService localSubscriptionService;
-    private final DeviceStateService deviceStateService;
-    private final TbClusterService clusterService;
     private final SubscriptionSchedulerComponent scheduler;
 
     private final Lock subsLock = new ReentrantLock();
@@ -118,7 +108,7 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
             }
             callback.onSuccess();
             if (event.hasTsOrAttrSub()) {
-                sendSubEventCallback(serviceId, entityId, event.getSeqNumber());
+                sendSubEventCallback(tenantId, serviceId, entityId, event.getSeqNumber());
             }
         } else {
             log.warn("[{}][{}][{}] Event belongs to external partition. Probably re-balancing is in progress. Topic: {}"
@@ -142,12 +132,12 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
         }
     }
 
-    private void sendSubEventCallback(String targetId, EntityId entityId, int seqNumber) {
+    private void sendSubEventCallback(TenantId tenantId, String targetId, EntityId entityId, int seqNumber) {
         var update = getEntityUpdatesInfo(entityId);
         if (serviceId.equals(targetId)) {
-            localSubscriptionService.onSubEventCallback(entityId, seqNumber, update, TbCallback.EMPTY);
+            localSubscriptionService.onSubEventCallback(tenantId, entityId, seqNumber, update, TbCallback.EMPTY);
         } else {
-            sendCoreNotification(targetId, entityId, TbSubscriptionUtils.toProto(entityId.getId(), seqNumber, update));
+            sendCoreNotification(targetId, entityId, TbSubscriptionUtils.toProto(tenantId, entityId.getId(), seqNumber, update));
         }
     }
 
@@ -162,9 +152,6 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
     @Override
     public void onTimeSeriesUpdate(TenantId tenantId, EntityId entityId, List<TsKvEntry> ts, TbCallback callback) {
         onTimeSeriesUpdate(entityId, ts);
-        if (entityId.getEntityType() == EntityType.DEVICE) {
-            updateDeviceInactivityTimeout(tenantId, entityId, ts);
-        }
         callback.onSuccess();
     }
 
@@ -172,13 +159,10 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
     public void onTimeSeriesDelete(TenantId tenantId, EntityId entityId, List<String> keys, TbCallback callback) {
         onTimeSeriesUpdate(entityId,
                 keys.stream().map(key -> new BasicTsKvEntry(0, new StringDataEntry(key, ""))).collect(Collectors.toList()));
-        if (entityId.getEntityType() == EntityType.DEVICE) {
-            deleteDeviceInactivityTimeout(tenantId, entityId, keys);
-        }
         callback.onSuccess();
     }
 
-    public void onTimeSeriesUpdate(EntityId entityId, List<TsKvEntry> update) {
+    private void onTimeSeriesUpdate(EntityId entityId, List<TsKvEntry> update) {
         getEntityUpdatesInfo(entityId).timeSeriesUpdateTs = System.currentTimeMillis();
         TbEntityRemoteSubsInfo subInfo = entitySubscriptions.get(entityId);
         if (subInfo != null) {
@@ -208,42 +192,26 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
 
     @Override
     public void onAttributesUpdate(TenantId tenantId, EntityId entityId, String scope, List<AttributeKvEntry> attributes, TbCallback callback) {
-        onAttributesUpdate(tenantId, entityId, scope, attributes, true, callback);
-    }
-
-    @Override
-    public void onAttributesUpdate(TenantId tenantId, EntityId entityId, String scope, List<AttributeKvEntry> attributes, boolean notifyDevice, TbCallback callback) {
         getEntityUpdatesInfo(entityId).attributesUpdateTs = System.currentTimeMillis();
         processAttributesUpdate(entityId, scope, attributes);
-        if (entityId.getEntityType() == EntityType.DEVICE) {
-            if (TbAttributeSubscriptionScope.SERVER_SCOPE.name().equalsIgnoreCase(scope)) {
-                updateDeviceInactivityTimeout(tenantId, entityId, attributes);
-            } else if (TbAttributeSubscriptionScope.SHARED_SCOPE.name().equalsIgnoreCase(scope) && notifyDevice) {
-                clusterService.pushMsgToCore(DeviceAttributesEventNotificationMsg.onUpdate(tenantId,
-                                new DeviceId(entityId.getId()), DataConstants.SHARED_SCOPE, new ArrayList<>(attributes))
-                        , null);
-            }
-        }
         callback.onSuccess();
     }
 
     @Override
-    public void onAttributesDelete(TenantId tenantId, EntityId entityId, String scope, List<String> keys, boolean notifyDevice, TbCallback callback) {
-        processAttributesUpdate(entityId, scope,
-                keys.stream().map(key -> new BaseAttributeKvEntry(0, new StringDataEntry(key, ""))).collect(Collectors.toList()));
-        if (entityId.getEntityType() == EntityType.DEVICE) {
-            if (TbAttributeSubscriptionScope.SERVER_SCOPE.name().equalsIgnoreCase(scope)
-                    || TbAttributeSubscriptionScope.ANY_SCOPE.name().equalsIgnoreCase(scope)) {
-                deleteDeviceInactivityTimeout(tenantId, entityId, keys);
-            } else if (TbAttributeSubscriptionScope.SHARED_SCOPE.name().equalsIgnoreCase(scope) && notifyDevice) {
-                clusterService.pushMsgToCore(DeviceAttributesEventNotificationMsg.onDelete(tenantId,
-                        new DeviceId(entityId.getId()), scope, keys), null);
-            }
+    public void onAttributesDelete(TenantId tenantId, EntityId entityId, String scope, List<String> keys, TbCallback callback) {
+        try {
+            List<AttributeKvEntry> deletedEntries = keys.stream()
+                    .<AttributeKvEntry>map(key -> new BaseAttributeKvEntry(0L, new StringDataEntry(key, "")))
+                    .toList();
+            processAttributesUpdate(entityId, scope, deletedEntries);
+        } catch (Exception e) {
+            callback.onFailure(e);
+            return;
         }
         callback.onSuccess();
     }
 
-    public void processAttributesUpdate(EntityId entityId, String scope, List<AttributeKvEntry> update) {
+    private void processAttributesUpdate(EntityId entityId, String scope, List<AttributeKvEntry> update) {
         TbEntityRemoteSubsInfo subInfo = entitySubscriptions.get(entityId);
         if (subInfo != null) {
             log.trace("[{}] Handling attributes update: {}", entityId, update);
@@ -268,22 +236,6 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
             localSubscriptionService.onAttributesUpdate(entityId, scope, tsKvEntryList, TbCallback.EMPTY);
         } else {
             sendCoreNotification(targetId, entityId, TbSubscriptionUtils.toProto(scope, entityId, tsKvEntryList));
-        }
-    }
-
-    private void updateDeviceInactivityTimeout(TenantId tenantId, EntityId entityId, List<? extends KvEntry> kvEntries) {
-        for (KvEntry kvEntry : kvEntries) {
-            if (kvEntry.getKey().equals(DefaultDeviceStateService.INACTIVITY_TIMEOUT)) {
-                deviceStateService.onDeviceInactivityTimeoutUpdate(tenantId, new DeviceId(entityId.getId()), getLongValue(kvEntry));
-            }
-        }
-    }
-
-    private void deleteDeviceInactivityTimeout(TenantId tenantId, EntityId entityId, List<String> keys) {
-        for (String key : keys) {
-            if (key.equals(DefaultDeviceStateService.INACTIVITY_TIMEOUT)) {
-                deviceStateService.onDeviceInactivityTimeoutUpdate(tenantId, new DeviceId(entityId.getId()), 0);
-            }
         }
     }
 
@@ -353,29 +305,6 @@ public class DefaultSubscriptionManagerService extends TbApplicationEventListene
         } else {
             sendCoreNotification(targetServiceId, entityId,
                     TbSubscriptionUtils.notificationsSubUpdateToProto(entityId, subscriptionUpdate));
-        }
-    }
-
-    private static long getLongValue(KvEntry kve) {
-        switch (kve.getDataType()) {
-            case LONG:
-                return kve.getLongValue().orElse(0L);
-            case DOUBLE:
-                return kve.getDoubleValue().orElse(0.0).longValue();
-            case STRING:
-                try {
-                    return Long.parseLong(kve.getStrValue().orElse("0"));
-                } catch (NumberFormatException e) {
-                    return 0L;
-                }
-            case JSON:
-                try {
-                    return Long.parseLong(kve.getJsonValue().orElse("0"));
-                } catch (NumberFormatException e) {
-                    return 0L;
-                }
-            default:
-                return 0L;
         }
     }
 
