@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2024 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
  */
 package org.thingsboard.server.queue.discovery;
 
+import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,16 +24,17 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
 import org.thingsboard.server.common.data.StringUtils;
 import org.thingsboard.server.common.data.TbTransportService;
+import org.thingsboard.server.common.data.job.JobType;
 import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.gen.transport.TransportProtos;
 import org.thingsboard.server.gen.transport.TransportProtos.ServiceInfo;
+import org.thingsboard.server.queue.edqs.EdqsConfig;
+import org.thingsboard.server.queue.task.TaskProcessor;
 import org.thingsboard.server.queue.util.AfterContextReady;
 
-import jakarta.annotation.PostConstruct;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -64,11 +66,20 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     @Value("${service.rule_engine.assigned_tenant_profiles:}")
     private Set<UUID> assignedTenantProfiles;
 
+    @Autowired(required = false)
+    private EdqsConfig edqsConfig;
+
     @Autowired
     private ApplicationContext applicationContext;
 
+    @Autowired(required = false)
+    private List<TaskProcessor<?, ?>> availableTaskProcessors;
+
     private List<ServiceType> serviceTypes;
+    private List<JobType> taskTypes;
     private ServiceInfo serviceInfo;
+
+    private boolean ready = true;
 
     @PostConstruct
     public void init() {
@@ -80,16 +91,27 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
             }
         }
         log.info("Current Service ID: {}", serviceId);
-        if (serviceType.equalsIgnoreCase("monolith")) {
-            serviceTypes = List.of(ServiceType.values());
-        } else {
-            serviceTypes = Collections.singletonList(ServiceType.of(serviceType));
-        }
+        serviceTypes = isMonolith() ?
+                List.of(ServiceType.values()) :
+                Collections.singletonList(ServiceType.of(serviceType));
         if (!serviceTypes.contains(ServiceType.TB_RULE_ENGINE) || assignedTenantProfiles == null) {
             assignedTenantProfiles = Collections.emptySet();
         }
+        if (serviceTypes.contains(ServiceType.EDQS)) {
+            ready = false;
+            if (StringUtils.isBlank(edqsConfig.getLabel())) {
+                edqsConfig.setLabel(serviceId);
+            }
+        }
+        if (CollectionsUtil.isNotEmpty(availableTaskProcessors)) {
+            taskTypes = availableTaskProcessors.stream()
+                    .map(TaskProcessor::getJobType)
+                    .toList();
+        } else {
+            taskTypes = Collections.emptyList();
+        }
 
-       generateNewServiceInfoWithCurrentSystemInfo();
+        generateNewServiceInfoWithCurrentSystemInfo();
     }
 
     @AfterContextReady
@@ -111,6 +133,11 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     }
 
     @Override
+    public boolean isMonolith() {
+        return serviceType.equalsIgnoreCase("monolith");
+    }
+
+    @Override
     public boolean isService(ServiceType serviceType) {
         return serviceTypes.contains(serviceType);
     }
@@ -124,7 +151,19 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
         if (CollectionsUtil.isNotEmpty(assignedTenantProfiles)) {
             builder.addAllAssignedTenantProfiles(assignedTenantProfiles.stream().map(UUID::toString).collect(Collectors.toList()));
         }
+        if (edqsConfig != null) {
+            builder.setLabel(edqsConfig.getLabel());
+        }
+        builder.setReady(ready);
+        builder.addAllTaskTypes(taskTypes.stream().map(JobType::name).toList());
         return serviceInfo = builder.build();
+    }
+
+    @Override
+    public boolean setReady(boolean ready) {
+        boolean changed = this.ready != ready;
+        this.ready = ready;
+        return changed;
     }
 
     private TransportProtos.SystemInfoProto getCurrentSystemInfoProto() {
